[package]
name = "bike_http"
version = "0.1.0"
authors = ["camilojc <camilo@jcoder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bike_core = { path = "../bike_core" }

rocket = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
